<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniPlay</string>
    <string name="action_settings">Settings</string>
    <string name="playVideo">播放</string>
    <string name="pauseVideo">暂停</string>
    <string name="stopVideo">停止</string>
    <string name="prevVideo">前一部</string>
    <string name="nextVideo">后一部</string>
    <string name="connected">连接成功！</string>
    <string name="connectFailed">连接失败！</string>
    <string name="paused">暂停</string>
    <string name="playing">开始播放</string>
    <string name="stopped">停止</string>
    <string name="deviceListName">请选择设备</string>
    <string name="connectTimeout">5000</string>
    <string name="deviceFound">发现设备</string>
    <string name="deviceLost">丢失设备</string>
    <string name="imageTabName">图片</string>
    <string name="audioTabName">音乐</string>
    <string name="videoTabName">视频</string>
    <string name="volumeInc">音量+</string>
    <string name="volumeDec">音量-</string>
    <string name="prevAudio">上一曲</string>
    <string name="nextAudio">下一曲</string>
    <string name="localDeviceName">我的手机</string>
    <string name="slideDialogName">确认停止幻灯片播放模式</string>
    <string name="push">推送</string>
    <string name="startSlide">开始播放幻灯片</string>
    <string name="serviceUnavailable">联播服务未安装，点击确定去往应用商店安装</string>

</resources>
